--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -184,6 +184,16 @@ src/lib/gfx/mod-gles2/mod-gles2-resolution.c
 src/lib/gfx/mod-gles2/mod-gles2-setup.c
 src/lib/gfx/mod-gles2/mod-gles2-timer.c
 src/lib/gfx/mod-gles2/mod-gles2-viewport.c
+src/lib/gfx/mod-soft/mod-soft-backend.c
+src/lib/gfx/mod-soft/mod-soft-const.c
+src/lib/gfx/mod-soft/mod-soft-event.c
+src/lib/gfx/mod-soft/mod-soft-mode.c
+src/lib/gfx/mod-soft/mod-soft-path.c
+src/lib/gfx/mod-soft/mod-soft-repr.c
+src/lib/gfx/mod-soft/mod-soft-resolution.c
+src/lib/gfx/mod-soft/mod-soft-setup.c
+src/lib/gfx/mod-soft/mod-soft-timer.c
+src/lib/gfx/mod-soft/mod-soft-viewport.c
 src/lib/glb/glb-base64.c
 src/lib/glb/glb-sha1.c
 src/lib/glb/glb-test.c
