--- a/liquidwar6/src/lib/gfx/Makefile.am
+++ b/liquidwar6/src/lib/gfx/Makefile.am
@@ -27,12 +27,17 @@ if MOD_GLES2
 AM_CFLAGS = @LW6_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @GLES2_LIBS@ @SDL_LIBS@
 else
+if MOD_SOFT
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @SOFT_LIBS@ @SDL_LIBS@
+else
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 endif
+endif
 else
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ 
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ 
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
@@ -52,9 +57,17 @@ MOD_GLES2_SUBDIR =
 MOD_GLES2_LIB_S =
 endif
 
+if MOD_SOFT
+MOD_SOFT_SUBDIR = mod-soft
+MOD_SOFT_LIB_S = mod-soft/libmod_soft_s.la
+else
+MOD_SOFT_SUBDIR =
+MOD_SOFT_LIB_S =
+endif
+
 if ALLINONE
 LW6DYN_LIB = 
-LW6GFX_LIB_S = $(MOD_GL1_LIB_S) $(MOD_GLES2_LIB_S)
+LW6GFX_LIB_S = $(MOD_GL1_LIB_S) $(MOD_GLES2_LIB_S) $(MOD_SOFT_LIB_S)
 else
 LW6DYN_LIB = ../dyn/libdyn.la 
 LW6GFX_LIB_S =
@@ -73,5 +86,5 @@ liquidwar6gfx_test_LDADD = libgfx.la $(LW6DYN_LIB) ../vox/libvox.la ../gui/libgu
 TESTS = liquidwar6gfx-test
 endif
 
-SUBDIRS = $(MOD_GL1_SUBDIR) $(MOD_GLES2_SUBDIR)
+SUBDIRS = $(MOD_GL1_SUBDIR) $(MOD_GLES2_SUBDIR) $(MOD_SOFT_SUBDIR)
 
