--- a/liquidwar6/src/lib/sys/Makefile.am
+++ b/liquidwar6/src/lib/sys/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-AM_CFLAGS = @LW6_CFLAGS@ @LW6_CONSOLE_ENABLE_CFLAGS@ @LW6_GTK_ENABLE_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_CSOUND_ENABLE_CFLAGS@ @MOD_OGG_ENABLE_CFLAGS@ @MOD_HTTP_ENABLE_CFLAGS@ -DLW6_TOP_SRCDIR=\"$(top_srcdir)\" -DLW6_PREFIX=\"$(prefix)\" -DLW6_DATADIR=\"$(datadir)\" -DLW6_LIBDIR=\"$(libdir)\" -DLW6_INCLUDEDIR=\"$(includedir)\" -DLW6_LOCALEDIR=\"$(localedir)\" -DLW6_DOCDIR=\"$(docdir)\"
+AM_CFLAGS = @LW6_CFLAGS@ @LW6_CONSOLE_ENABLE_CFLAGS@ @LW6_GTK_ENABLE_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ @MOD_CSOUND_ENABLE_CFLAGS@ @MOD_OGG_ENABLE_CFLAGS@ @MOD_HTTP_ENABLE_CFLAGS@ -DLW6_TOP_SRCDIR=\"$(top_srcdir)\" -DLW6_PREFIX=\"$(prefix)\" -DLW6_DATADIR=\"$(datadir)\" -DLW6_LIBDIR=\"$(libdir)\" -DLW6_INCLUDEDIR=\"$(includedir)\" -DLW6_LOCALEDIR=\"$(localedir)\" -DLW6_DOCDIR=\"$(docdir)\"
 AM_OBJCFLAGS = $(AM_CFLAGS)
 AM_LDFLAGS = @LW6_LDFLAGS@ @LW6_GTK_ENABLE_LDFLAGS@ -lm
 
