trying to fix linking issue (does not compile at this stage)

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -91,6 +91,7 @@ src/lib/dyn/dyn-test.c
 src/lib/dyn/dyn-testmain.c
 src/lib/gfx/gfx-api.c
 src/lib/gfx/gfx-register.c
+src/lib/gfx/gfx-sdl.c
 src/lib/gfx/gfx-test.c
 src/lib/gfx/gfx-testmain.c
 src/lib/gfx/mod-gl1/gl1-background/gl1-background-api.c
