--- a/liquidwar6/data/gfx/caca/Makefile.am
+++ b/liquidwar6/data/gfx/caca/Makefile.am
@@ -18,4 +18,9 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-SUBDIRS = gl1 gles2 soft sdl caca
+#SUBDIRS = images fonts icon
+
+pkgdata_DATA = README caca-const.xml
+pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/gfx/caca
+EXTRA_DIST = $(pkgdata_DATA)
+
