--- a/liquidwar6/src/lib/gfx/Makefile.am
+++ b/liquidwar6/src/lib/gfx/Makefile.am
@@ -31,13 +31,18 @@ if MOD_SOFT
 AM_CFLAGS = @LW6_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @SOFT_LIBS@ @SDL_LIBS@
 else
+if MOD_CACA
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_CACA_ENABLE_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @CACA_LIBS@
+else
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 endif
 endif
+endif
 else
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ 
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @MOD_SOFT_ENABLE_CFLAGS@ @MOD_CACA_ENABLE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
@@ -73,9 +78,17 @@ SHARED_SDL_SUBDIR =
 SHARED_SDL_LIB_S =
 endif
 
+if MOD_CACA
+MOD_CACA_SUBDIR = mod-caca
+MOD_CACA_LIB_S = mod-caca/libmod_caca_s.la
+else
+MOD_CACA_SUBDIR =
+MOD_CACA_LIB_S =
+endif
+
 if ALLINONE
 LW6DYN_LIB = 
-LW6GFX_LIB_S = $(MOD_GL1_LIB_S) $(MOD_GLES2_LIB_S) $(MOD_SOFT_LIB_S) $(SHARED_SDL_LIB_S) 
+LW6GFX_LIB_S = $(MOD_GL1_LIB_S) $(MOD_GLES2_LIB_S) $(MOD_SOFT_LIB_S) $(SHARED_SDL_LIB_S) $(MOD_CACA_LIB_S)
 else
 LW6DYN_LIB = ../dyn/libdyn.la 
 LW6GFX_LIB_S =
@@ -94,6 +107,6 @@ liquidwar6gfx_test_LDADD = libgfx.la $(LW6DYN_LIB) ../vox/libvox.la ../gui/libgu
 TESTS = liquidwar6gfx-test
 endif
 
-SUBDIRS = $(MOD_GL1_SUBDIR) $(MOD_GLES2_SUBDIR) $(MOD_SOFT_SUBDIR) $(SHARED_SDL_SUBDIR)
+SUBDIRS = $(MOD_GL1_SUBDIR) $(MOD_GLES2_SUBDIR) $(MOD_SOFT_SUBDIR) $(SHARED_SDL_SUBDIR) $(MOD_CACA_SUBDIR)
 
 EXTRA_DIST = gfx-internal.h
