Fixed #37429, introduced SEED (problem was pilot commit in test).

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -403,6 +403,7 @@ src/lib/pil/pil-coords.c
 src/lib/pil/pil-dump.c
 src/lib/pil/pil-localcursors.c
 src/lib/pil/pil-pilot.c
+src/lib/pil/pil-seed.c
 src/lib/pil/pil-seq.c
 src/lib/pil/pil-spread.c
 src/lib/pil/pil-test.c
