--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -407,6 +407,7 @@ src/lib/pil/pil-pilot.c
 src/lib/pil/pil-seed.c
 src/lib/pil/pil-seq.c
 src/lib/pil/pil-spread.c
+src/lib/pil/pil-suite.c
 src/lib/pil/pil-test.c
 src/lib/pil/pil-testmain.c
 src/lib/pil/pil-worker.c
