More pub doc batch generation

--- a/liquidwar6/doc/Makefile.am
+++ b/liquidwar6/doc/Makefile.am
@@ -70,29 +70,29 @@ coverage-pub: coverage.tar.gz
 
 coverage.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	rm -rf coverage-tmp && mkdir coverage-tmp && cd coverage-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && pwd > pwd.txt && mkdir build && cd build && $$(cat ../pwd.txt)/configure --enable-gcov && rm -f ../pwd.txt && make && src/liquidwar6 check && cd doc/coverage && make opt && rm -f Makefile && cd .. && tar czf coverage.tar.gz coverage && cd ../../../.. && mv coverage-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/build/doc/coverage.tar.gz . && rm -rf coverage-tmp
-	tar czf coverage.tar.gz coverage
 
 global-pub: global.tar.gz
 
 global.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	tar czf global.tar.gz global
+	rm -rf global-tmp && mkdir global-tmp && cd global-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure && cd doc/global && make opt && mv HTML global && tar czf global.tar.gz global && cd ../../../.. && mv global-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/global/global.tar.gz . && rm -rf global-tmp
 
 cyclo-pub: cyclo.tar.gz
 
 cyclo.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	tar czf cyclo.tar.gz cyclo
+	rm -rf cyclo-tmp && mkdir cyclo-tmp && cd cyclo-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure && cd doc/cyclo && make opt && mkdir cyclo && mv index.html cyclo && tar czf cyclo.tar.gz cyclo && cd ../../../.. && mv cyclo-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/cyclo/cyclo.tar.gz . && rm -rf cyclo-tmp
 
 doxygen-pub: doxygen.tar.gz
 
 doxygen.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	tar czf doxygen.tar.gz doxygen
+	rm -rf doxygen-tmp && mkdir doxygen-tmp && cd doxygen-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure && cd doc/doxygen && make opt && mv html doxygen && tar czf doxygen.tar.gz doxygen && cd ../../../.. && mv doxygen-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/doxygen/doxygen.tar.gz . && rm -rf doxygen-tmp
 
 @PACKAGE_TARNAME@-savannah-cvs.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	rm -rf @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && tar xzf @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && ./configure && cd doc/
 
 clean-local:
 	rm -f deps.png deps.pdf
-	rm -rf pub.tar.gz && coverage.tar.gz && global.tar.gz && cyclo.tar.gz && doxygen.tar.gz
+	rm -f pub.tar.gz coverage.tar.gz global.tar.gz cyclo.tar.gz doxygen.tar.gz
+	rm -rf pub coverage-tmp global-tmp cyclo-tmp doxygen-tmp
 
 install-data-local:
 	if test -d liquidwar6.html ; then install -d $(DESTDIR)$(docdir)/html ; cp -f liquidwar6.html/* $(DESTDIR)$(docdir)/html/ ; fi
