Added gendocs.sh utility to generate official docs automatically.

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -897,6 +897,7 @@ AC_CONFIG_FILES([Makefile
           doc/doxygen/Makefile
           doc/doxygen/doxygen-xml.cfg
           doc/doxygen/doxygen-html.cfg
+	  doc/manual/Makefile
           doc/example/Makefile
           doc/dtd/Makefile
           src/Makefile
