--- a/liquidwar6/doc/Makefile.am
+++ b/liquidwar6/doc/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-SUBDIRS = coverage global cyclo doxygen example dtd
+SUBDIRS = coverage global cyclo doxygen manual example dtd
 
 info_TEXINFOS = liquidwar6.texi
 gdoc_TEXINFOS = liquidwar6-gdoc.texi bot-gdoc.texi cfg-gdoc.texi cli-gdoc.texi cns-gdoc.texi cnx-gdoc.texi dat-gdoc.texi dsp-gdoc.texi dyn-gdoc.texi fdl.texi gfx-gdoc.texi glb-gdoc.texi gpl.texi gui-gdoc.texi hlp-gdoc.texi img-gdoc.texi ker-gdoc.texi ldr-gdoc.texi liquidwar6-gdoc.texi map-gdoc.texi mod-brute-gdoc.texi mod-caca-gdoc.texi mod-csound-gdoc.texi mod-follow-gdoc.texi mod-gl1-gdoc.texi mod-gles2-gdoc.texi mod-httpd-gdoc.texi mod-http-gdoc.texi mod-idiot-gdoc.texi mod-ogg-gdoc.texi mod-random-gdoc.texi mod-soft-gdoc.texi mod-tcpd-gdoc.texi mod-tcp-gdoc.texi mod-udpd-gdoc.texi mod-udp-gdoc.texi msg-gdoc.texi net-gdoc.texi nod-gdoc.texi p2p-gdoc.texi pil-gdoc.texi scm-gdoc.texi shared-sdl-gdoc.texi sim-gdoc.texi snd-gdoc.texi srv-gdoc.texi sys-gdoc.texi tsk-gdoc.texi vox-gdoc.texi
@@ -61,10 +61,8 @@ targz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz:
 	echo "Run make dist in parent directory and/or copy @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz here."
 
-pub: pub.tar.gz
-
-pub.tar.gz: coverage-pub global-pub cyclo-pub doxygen-pub
-	rm -rf pub && mkdir pub && cd pub && tar xzf ../coverage.tar.gz && tar xzf ../global.tar.gz && tar xzf ../cyclo.tar.gz && tar xzf ../doxygen.tar.gz && cd .. && tar czf $@ pub && rm -rf pub
+pub: coverage-pub global-pub cyclo-pub doxygen-pub manual-pub
+	echo "Generated pub doc (coverage.tar.gz global.tar.gz cyclo.tar.gz doxygen.tar.gz manual.tar.gz)"
 
 coverage-pub: coverage.tar.gz
 
@@ -86,13 +84,18 @@ doxygen-pub: doxygen.tar.gz
 doxygen.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	rm -rf doxygen-tmp && mkdir doxygen-tmp && cd doxygen-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure && cd doc/doxygen && make opt && mv html doxygen && tar czf doxygen.tar.gz doxygen && cd ../../../.. && mv doxygen-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/doxygen/doxygen.tar.gz . && rm -rf doxygen-tmp
 
+manual-pub: manual.tar.gz
+
+manual.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
+	rm -rf manual-tmp && mkdir manual-tmp && cd manual-tmp && tar xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure && cd doc/manual && make opt && tar czf manual.tar.gz manual && cd ../../../.. && mv manual-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/manual/manual.tar.gz . && rm -rf manual-tmp
+
 @PACKAGE_TARNAME@-savannah-cvs.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	rm -rf @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && tar xzf @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && ./configure && cd doc/
 
 clean-local:
 	rm -f deps.png deps.pdf
-	rm -f pub.tar.gz coverage.tar.gz global.tar.gz cyclo.tar.gz doxygen.tar.gz
-	rm -rf pub coverage-tmp global-tmp cyclo-tmp doxygen-tmp
+	rm -f coverage.tar.gz global.tar.gz cyclo.tar.gz doxygen.tar.gz manual.tar.gz
+	rm -rf coverage-tmp global-tmp cyclo-tmp doxygen-tmp manual-tmp
 
 install-data-local:
 	if test -d liquidwar6.html ; then install -d $(DESTDIR)$(docdir)/html ; cp -f liquidwar6.html/* $(DESTDIR)$(docdir)/html/ ; fi
